fix(*): replace wrong font in heading text

--- a/src/App.scss
+++ b/src/App.scss
@@ -38,6 +38,8 @@ ul {
     font-size: 3.2rem;
     line-height: normal;
     text-align: left;
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: 300;
   }
 
   &-white {
